# kindle-highlight-sync

./: .coverage  .gitignore  Claude.md  Project-Log.md  Project-Summary.md  README.md  coverage.json  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  DATABASE.md  Getting-Started.md  SPECIFICATION.md
scripts/: check_missing_images.py  show_highlights.py
src/kindle_sync/: __init__.py  auth.py  cli.py  config.py  database.py  exporter.py  menu_bar.py  models.py  scraper.py  utils.py  web.py
src/kindle_sync/services/: __init__.py  auth_service.py  database_service.py  export_service.py  image_service.py  scraper_service.py  sync_service.py
src/kindle_sync/templates/: default.md.j2  detailed.md.j2  simple.md.j2
src/kindle_sync/templates/export/: astro.md.j2
src/kindle_sync/templates/web/: add_physical_book.html  base.html  book.html  index.html  search.html  settings.html
tests/: __init__.py  conftest.py  test_database.py  test_exporter.py  test_scraper.py  test_utils.py  test_web.py
tests/services/: test_database_service.py  test_export_service.py  test_scraper_service.py  test_sync_service.py
